src/tests/snapshots/synoik__tests__window_opening__check_target_output_and_workspace@ws2-wfsBN-spB2.snap
---
source: src/tests/window_opening.rs
description: "open on workspace: ws-2\nwant fullscreen: BN\nset parent: B2"
expression: snapshot
---
final monitor: headless-2
final workspace: 0 (ws-2)

initial configure:
size: 1920 × 1080, bounds: 1900 × 1060, states: [Fullscreen]

post-map configures:
size: 1920 × 1080, bounds: 1868 × 1028, states: [Fullscreen]

unfullscreen configure:
size: 0 × 0, bounds: 1900 × 1060, states: []
