src/tests/snapshots/synoik__tests__window_opening__check_target_size@b-t.snap
---
source: src/tests/window_opening.rs
description: "border on\ntabbed"
expression: snapshot
---
initial configure:
size: 599 × 680, bounds: 1231 × 680, states: []

post-map configures:
size: 599 × 680, bounds: 1231 × 680, states: [Activated]
