src/tests/snapshots/synoik__tests__window_opening__check_target_size@dhF500-b-t.snap
---
source: src/tests/window_opening.rs
description: "default window height: F500\nborder on\ntabbed"
expression: snapshot
---
initial configure:
size: 599 × 500, bounds: 1231 × 680, states: []

post-map configures:
size: 599 × 500, bounds: 1231 × 680, states: [Activated]
